fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -171,6 +171,17 @@ h2{
     color:#FFEB00;
 }
 
+.thin-font{
+    font-weight:100 !important;
+}
+mark {
+    background-color: yellow;
+}
+
+#skills p{
+    font-size:2.5em;
+}
+
 .card {
     background:none;
     border:none;
@@ -192,7 +203,6 @@ h2{
     min-height:100%;
     background-color:#6EDDD4;
     background-image: url(images/portfolio_background.png);
-
 }
 
 .portfolio-2{
@@ -218,17 +228,16 @@ h2{
     font-style:italic;
     color: white;
 }
+
 .card-number {    
     font-style:oblique;
 }
-
 
 .contact{
     height:100%;
     min-height:100%;
     background-color:#F2880C;
 }
-
 
 .btn, .btn-primary {
     background-color:#FFEB00;
@@ -284,6 +293,7 @@ a.btn:hover, .btn:hover{
 
     body {
         height:auto;
+        font-size:0.95em
     }
     .home {
         height: auto; 
